# jumanji-jobshop-experiments

./: HowTo.txt  LICENSE  main.py  pyproject.toml
configs/: jobshop_config.yaml
notebooks/: jobshop_experiments.ipynb
results/: pure_results_SARL_JobShop.csv  results_SARL_JobShop.csv
src/jobshop_experiments/: run_jobshop.py
